RESOLVED FIXED13190
XPath incorrectly handles namespaces on attributes
https://bugs.webkit.org/show_bug.cgi?id=13190
Summary XPath incorrectly handles namespaces on attributes
Alexey Proskuryakov
Reported 2007-03-25 03:50:01 PDT
Multiple issues; a patch with a test case forthcoming.
Attachments
proposed fix (17.63 KB, patch)
2007-03-25 03:57 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-03-25 03:57:44 PDT
Created attachment 13810 [details] proposed fix
Darin Adler
Comment 2 2007-03-27 21:55:43 PDT
Comment on attachment 13810 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2007-03-28 10:04:37 PDT
Committed revision 20554.
Note You need to log in before you can comment on or make changes to this bug.